# CommunitiesAIAssistant

./: README.md  apikeys  main.py  pyproject.toml  requirement.txt  test.ipynb
Data/: AIML Guild.txt  Architecture Review Board (ARB).txt  Cloud Center of Excellence (CCoE).txt  Cybersecurity Council.txt  Data Science Council.txt  GenAI Task Force.txt  Innovation Task Force.txt  Steering Committee (SteerCo).txt  Strategy Council.txt  Tiger Team.txt  vector_db_creation.ipynb
backend-app/app/: main.py
backend-app/app/api/v1/: routers.py
backend-app/app/api/v1/endpoints/: authentication.py  chat.py
backend-app/app/core/: config.py  get_user_role.py
backend-app/app/dependency/: auth_dependency.py
backend-app/app/graph/edges/: edgefunction.py
backend-app/app/graph/nodes/: graphNode.py
backend-app/app/graph/state/: graphstate.py
backend-app/app/schemas/: chat_schemas.py
backend-app/app/schemas/application/: api_db_schema.py
backend-app/app/services/: chat_service.py
backend-app/app/utils/: utility_functions.py
